tests/errors/E038.zen
struct demo {
    valid: int,
}

struct demo {
    data: bool,
}